--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   home_widget: ^0.7.0
   shared_preferences: ^2.3.2
+  file_picker: ^8.1.3
 
 dev_dependencies:
   flutter_test:
